# project-eval-6

./: .gitignore  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  PACKAGE_INIT_SUMMARY.md  README.md  STATISTICS_TESTS_SUMMARY.md  STORAGE_TESTS_SUMMARY.md  pyproject.toml  setup.cfg  test_api_manual.py  test_init.py  validate_tests.py
pyshort/: __init__.py  api.py  generator.py  models.py  stats.py  storage.py  validator.py
tests/: __init__.py  test_api.py  test_basic.py  test_generator.py  test_models.py  test_stats.py  test_stats_extended.py  test_storage.py  test_validator.py
